[gd_scene load_steps=15 format=2]

[ext_resource path="res://tileset/tilemap_house_interior.tres" type="TileSet" id=1]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=2]
[ext_resource path="res://sprites/sprsheet_npc.png" type="Texture" id=3]
[ext_resource path="res://maps/chapter1/scripts/npc_friend.gd" type="Script" id=4]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=5]
[ext_resource path="res://areas/area_change_map.tscn" type="PackedScene" id=6]
[ext_resource path="res://dialogue/dialogue_system.tscn" type="PackedScene" id=7]
[ext_resource path="res://dialogue/dialogue_holder.tscn" type="PackedScene" id=8]
[ext_resource path="res://sprites/spr_npc/npc_male_blue.png" type="Texture" id=9]
[ext_resource path="res://sprites/spr_mc/spr_neutral.png" type="Texture" id=10]
[ext_resource path="res://sprites/spr_mc/spr_concerned.png" type="Texture" id=11]
[ext_resource path="res://sprites/spr_mc/spr_happy.png" type="Texture" id=12]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="chapter1-friend_house" type="Node2D"]

[node name="tilemap_house_interor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( -327689, 5, 65537, -327688, 5, 65537, -327687, 5, 65537, -327686, 5, 65537, -327685, 5, 65537, -327684, 5, 65537, -327683, 5, 65537, -327682, 5, 65537, -327681, 5, 65537, -393216, 5, 65537, -393215, 5, 65537, -393214, 5, 65537, -393213, 5, 65537, -393212, 5, 65537, -393211, 5, 65537, -393210, 5, 65537, -393209, 5, 65537, -393208, 5, 65537, -393207, 5, 65537, -393206, 5, 65537, -393205, 5, 65537, -393204, 5, 65537, -393203, 5, 65537, -393202, 5, 65537, -393201, 5, 65537, -393200, 5, 65537, -393199, 5, 65537, -393198, 5, 65537, -393197, 5, 65537, -262153, 5, 65537, -262152, 5, 65537, -262151, 5, 65537, -262150, 5, 65537, -262149, 5, 65537, -262148, 5, 65537, -262147, 5, 65537, -262146, 5, 65537, -262145, 5, 65537, -327680, 5, 65537, -327679, 5, 65537, -327678, 5, 65537, -327677, 5, 65537, -327676, 5, 65537, -327675, 5, 65537, -327674, 5, 65537, -327673, 5, 65537, -327672, 5, 65537, -327671, 5, 65537, -327670, 5, 65537, -327669, 5, 65537, -327668, 5, 65537, -327667, 5, 65537, -327666, 5, 65537, -327665, 5, 65537, -327664, 5, 65537, -327663, 5, 65537, -327662, 5, 65537, -327661, 5, 65537, -196617, 5, 65537, -196616, 5, 65537, -196615, 5, 65537, -196614, 5, 65537, -196613, 5, 65537, -196612, 5, 65537, -196611, 5, 65537, -196610, 5, 65537, -196609, 5, 65537, -262144, 5, 65537, -262143, 5, 65537, -262142, 5, 65537, -262141, 5, 65537, -262140, 5, 65537, -262139, 5, 65537, -262138, 5, 65537, -262137, 5, 65537, -262136, 5, 65537, -262135, 5, 65537, -262134, 5, 65537, -262133, 5, 65537, -262132, 5, 65537, -262131, 5, 65537, -262130, 5, 65537, -262129, 5, 65537, -262128, 5, 65537, -262127, 5, 65537, -262126, 5, 65537, -262125, 5, 65537, -131081, 5, 65537, -131080, 5, 65537, -131079, 5, 65537, -131078, 5, 65537, -131077, 5, 65537, -131076, 5, 65537, -131075, 5, 65537, -131074, 5, 65537, -131073, 5, 65537, -196608, 5, 65537, -196607, 5, 65537, -196606, 5, 65537, -196605, 5, 65537, -196604, 5, 65537, -196603, 5, 65537, -196602, 5, 65537, -196601, 5, 65537, -196600, 5, 65537, -196599, 5, 65537, -196598, 5, 65537, -196597, 5, 65537, -196596, 5, 65537, -196595, 5, 65537, -196594, 5, 65537, -196593, 5, 65537, -196592, 5, 65537, -196591, 5, 65537, -196590, 5, 65537, -196589, 5, 65537, -65545, 5, 65537, -65544, 5, 65537, -65543, 5, 65537, -65542, 5, 65537, -65541, 5, 65537, -65540, 5, 65537, -65539, 5, 65537, -65538, 5, 65537, -65537, 5, 65537, -131072, 5, 65537, -131071, 5, 65537, -131070, 5, 65537, -131069, 5, 65537, -131068, 5, 65537, -131067, 5, 65537, -131066, 5, 65537, -131065, 5, 65537, -131064, 5, 65537, -131063, 5, 65537, -131062, 5, 65537, -131061, 5, 65537, -131060, 5, 65537, -131059, 5, 65537, -131058, 5, 65537, -131057, 5, 65537, -131056, 5, 65537, -131055, 5, 65537, -131054, 5, 65537, -131053, 5, 65537, -9, 5, 65537, -8, 5, 65537, -7, 5, 65537, -6, 5, 65537, -5, 5, 65537, -4, 5, 65537, -3, 5, 65537, -2, 5, 65537, -1, 4, 0, -65536, 4, 1, -65535, 4, 1, -65534, 4, 1, -65533, 4, 1, -65532, 4, 1, -65531, 4, 1, -65530, 4, 1, -65529, 4, 1, -65528, 4, 2, -65527, 5, 65537, -65526, 5, 65537, -65525, 5, 65537, -65524, 5, 65537, -65523, 5, 65537, -65522, 5, 65537, -65521, 5, 65537, -65520, 5, 65537, -65519, 5, 65537, -65518, 5, 65537, -65517, 5, 65537, 65527, 5, 65537, 65528, 5, 65537, 65529, 5, 65537, 65530, 5, 65537, 65531, 5, 65537, 65532, 5, 65537, 65533, 5, 65537, 65534, 5, 65537, 65535, 4, 65536, 0, 6, 0, 1, 6, 0, 2, 6, 0, 3, 9, 0, 4, 9, 0, 5, 6, 0, 6, 6, 0, 7, 6, 0, 8, 4, 65538, 9, 5, 65537, 10, 5, 65537, 11, 5, 65537, 12, 5, 65537, 13, 5, 65537, 14, 5, 65537, 15, 5, 65537, 16, 5, 65537, 17, 5, 65537, 18, 5, 65537, 19, 5, 65537, 131063, 5, 65537, 131064, 5, 65537, 131065, 5, 65537, 131066, 5, 65537, 131067, 5, 65537, 131068, 5, 65537, 131069, 5, 65537, 131070, 5, 65537, 131071, 4, 65536, 65544, 4, 65538, 65545, 5, 65537, 65546, 5, 65537, 65547, 5, 65537, 65548, 5, 65537, 65549, 5, 65537, 65550, 5, 65537, 65551, 5, 65537, 65552, 5, 65537, 65553, 5, 65537, 65554, 5, 65537, 65555, 5, 65537, 196599, 5, 65537, 196600, 5, 65537, 196601, 5, 65537, 196602, 5, 65537, 196603, 5, 65537, 196604, 5, 65537, 196605, 5, 65537, 196606, 5, 65537, 196607, 4, 65536, 131072, 8, 0, 131073, 8, 0, 131074, 8, 0, 131075, 8, 0, 131076, 8, 0, 131077, 8, 0, 131078, 8, 0, 131079, 8, 0, 131080, 4, 65538, 131081, 5, 65537, 131082, 5, 65537, 131083, 5, 65537, 131084, 5, 65537, 131085, 5, 65537, 131086, 5, 65537, 131087, 5, 65537, 131088, 5, 65537, 131089, 5, 65537, 131090, 5, 65537, 131091, 5, 65537, 262135, 5, 65537, 262136, 5, 65537, 262137, 5, 65537, 262138, 5, 65537, 262139, 5, 65537, 262140, 5, 65537, 262141, 5, 65537, 262142, 5, 65537, 262143, 4, 65536, 196608, 8, 0, 196609, 8, 0, 196610, 8, 0, 196611, 8, 0, 196612, 8, 0, 196613, 8, 0, 196614, 8, 0, 196615, 8, 0, 196616, 4, 65538, 196617, 5, 65537, 196618, 5, 65537, 196619, 5, 65537, 196620, 5, 65537, 196621, 5, 65537, 196622, 5, 65537, 196623, 5, 65537, 196624, 5, 65537, 196625, 5, 65537, 196626, 5, 65537, 196627, 5, 65537, 327671, 5, 65537, 327672, 5, 65537, 327673, 5, 65537, 327674, 5, 65537, 327675, 5, 65537, 327676, 5, 65537, 327677, 5, 65537, 327678, 5, 65537, 327679, 4, 65536, 262144, 8, 0, 262145, 8, 0, 262146, 8, 0, 262147, 8, 0, 262148, 8, 0, 262149, 8, 0, 262150, 8, 0, 262151, 8, 0, 262152, 4, 65538, 262153, 5, 65537, 262154, 5, 65537, 262155, 5, 65537, 262156, 5, 65537, 262157, 5, 65537, 262158, 5, 65537, 262159, 5, 65537, 262160, 5, 65537, 262161, 5, 65537, 262162, 5, 65537, 262163, 5, 65537, 393207, 5, 65537, 393208, 5, 65537, 393209, 5, 65537, 393210, 5, 65537, 393211, 5, 65537, 393212, 5, 65537, 393213, 5, 65537, 393214, 5, 65537, 393215, 4, 65536, 327680, 8, 0, 327681, 8, 0, 327682, 8, 0, 327683, 8, 0, 327684, 8, 0, 327685, 8, 0, 327686, 8, 0, 327687, 8, 0, 327688, 4, 65538, 327689, 5, 65537, 327690, 5, 65537, 327691, 5, 65537, 327692, 5, 65537, 327693, 5, 65537, 327694, 5, 65537, 327695, 5, 65537, 327696, 5, 65537, 327697, 5, 65537, 327698, 5, 65537, 327699, 5, 65537, 458743, 5, 65537, 458744, 5, 65537, 458745, 5, 65537, 458746, 5, 65537, 458747, 5, 65537, 458748, 5, 65537, 458749, 5, 65537, 458750, 5, 65537, 458751, 4, 65536, 393216, 8, 0, 393217, 8, 0, 393218, 8, 0, 393219, 8, 0, 393220, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 4, 65538, 393225, 5, 65537, 393226, 5, 65537, 393227, 5, 65537, 393228, 5, 65537, 393229, 5, 65537, 393230, 5, 65537, 393231, 5, 65537, 393232, 5, 65537, 393233, 5, 65537, 393234, 5, 65537, 393235, 5, 65537, 524279, 5, 65537, 524280, 5, 65537, 524281, 5, 65537, 524282, 5, 65537, 524283, 5, 65537, 524284, 5, 65537, 524285, 5, 65537, 524286, 5, 65537, 524287, 4, 65536, 458752, 8, 0, 458753, 8, 0, 458754, 8, 0, 458755, 8, 0, 458756, 8, 0, 458757, 8, 0, 458758, 8, 0, 458759, 8, 0, 458760, 4, 65538, 458761, 5, 65537, 458762, 5, 65537, 458763, 5, 65537, 458764, 5, 65537, 458765, 5, 65537, 458766, 5, 65537, 458767, 5, 65537, 458768, 5, 65537, 458769, 5, 65537, 458770, 5, 65537, 458771, 5, 65537, 589815, 5, 65537, 589816, 5, 65537, 589817, 5, 65537, 589818, 5, 65537, 589819, 5, 65537, 589820, 5, 65537, 589821, 5, 65537, 589822, 5, 65537, 589823, 4, 65536, 524288, 8, 0, 524289, 8, 0, 524290, 8, 0, 524291, 8, 0, 524292, 8, 0, 524293, 8, 0, 524294, 8, 0, 524295, 8, 0, 524296, 4, 65538, 524297, 5, 65537, 524298, 5, 65537, 524299, 5, 65537, 524300, 5, 65537, 524301, 5, 65537, 524302, 5, 65537, 524303, 5, 65537, 524304, 5, 65537, 524305, 5, 65537, 524306, 5, 65537, 524307, 5, 65537, 655351, 5, 65537, 655352, 5, 65537, 655353, 5, 65537, 655354, 5, 65537, 655355, 5, 65537, 655356, 5, 65537, 655357, 5, 65537, 655358, 5, 65537, 655359, 4, 65536, 589824, 8, 0, 589825, 8, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 8, 0, 589830, 8, 0, 589831, 8, 0, 589832, 4, 65538, 589833, 5, 65537, 589834, 5, 65537, 589835, 5, 65537, 589836, 5, 65537, 589837, 5, 65537, 589838, 5, 65537, 589839, 5, 65537, 589840, 5, 65537, 589841, 5, 65537, 589842, 5, 65537, 589843, 5, 65537, 720887, 5, 65537, 720888, 5, 65537, 720889, 5, 65537, 720890, 5, 65537, 720891, 5, 65537, 720892, 5, 65537, 720893, 5, 65537, 720894, 5, 65537, 720895, 4, 65536, 655360, 8, 0, 655361, 8, 0, 655362, 8, 0, 655363, 8, 0, 655364, 8, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 4, 65538, 655369, 5, 65537, 655370, 5, 65537, 655371, 5, 65537, 655372, 5, 65537, 655373, 5, 65537, 655374, 5, 65537, 655375, 5, 65537, 655376, 5, 65537, 655377, 5, 65537, 655378, 5, 65537, 655379, 5, 65537, 786423, 5, 65537, 786424, 5, 65537, 786425, 5, 65537, 786426, 5, 65537, 786427, 5, 65537, 786428, 5, 65537, 786429, 5, 65537, 786430, 5, 65537, 786431, 4, 65536, 720896, 8, 0, 720897, 8, 0, 720898, 8, 0, 720899, 8, 0, 720900, 8, 0, 720901, 8, 0, 720902, 8, 0, 720903, 8, 0, 720904, 4, 65538, 720905, 5, 65537, 720906, 5, 65537, 720907, 5, 65537, 720908, 5, 65537, 720909, 5, 65537, 720910, 5, 65537, 720911, 5, 65537, 720912, 5, 65537, 720913, 5, 65537, 720914, 5, 65537, 720915, 5, 65537, 851959, 5, 65537, 851960, 5, 65537, 851961, 5, 65537, 851962, 5, 65537, 851963, 5, 65537, 851964, 5, 65537, 851965, 5, 65537, 851966, 5, 65537, 851967, 4, 65536, 786432, 8, 0, 786433, 8, 0, 786434, 8, 0, 786435, 8, 0, 786436, 8, 0, 786437, 8, 0, 786438, 8, 0, 786439, 8, 0, 786440, 4, 65538, 786441, 5, 65537, 786442, 5, 65537, 786443, 5, 65537, 786444, 5, 65537, 786445, 5, 65537, 786446, 5, 65537, 786447, 5, 65537, 786448, 5, 65537, 786449, 5, 65537, 786450, 5, 65537, 786451, 5, 65537, 917495, 5, 65537, 917496, 5, 65537, 917497, 5, 65537, 917498, 5, 65537, 917499, 5, 65537, 917500, 5, 65537, 917501, 5, 65537, 917502, 5, 65537, 917503, 4, 131072, 851968, 4, 131073, 851969, 4, 131073, 851970, 4, 131073, 851971, 8, 0, 851972, 4, 131073, 851973, 4, 131073, 851974, 4, 131073, 851975, 4, 131073, 851976, 4, 131074, 851977, 5, 65537, 851978, 5, 65537, 851979, 5, 65537, 851980, 5, 65537, 851981, 5, 65537, 851982, 5, 65537, 851983, 5, 65537, 851984, 5, 65537, 851985, 5, 65537, 851986, 5, 65537, 851987, 5, 65537, 983031, 5, 65537, 983032, 5, 65537, 983033, 5, 65537, 983034, 5, 65537, 983035, 5, 65537, 983036, 5, 65537, 983037, 5, 65537, 983038, 5, 65537, 983039, 5, 65537, 917504, 5, 65537, 917505, 5, 65537, 917506, 5, 65537, 917507, 5, 65537, 917508, 5, 65537, 917509, 5, 65537, 917510, 5, 65537, 917511, 5, 65537, 917512, 5, 65537, 917513, 5, 65537, 917514, 5, 65537, 917515, 5, 65537, 917516, 5, 65537, 917517, 5, 65537, 917518, 5, 65537, 917519, 5, 65537, 917520, 5, 65537, 917521, 5, 65537, 917522, 5, 65537, 917523, 5, 65537, 1048567, 5, 65537, 1048568, 5, 65537, 1048569, 5, 65537, 1048570, 5, 65537, 1048571, 5, 65537, 1048572, 5, 65537, 1048573, 5, 65537, 1048574, 5, 65537, 1048575, 5, 65537, 983040, 5, 65537, 983041, 5, 65537, 983042, 5, 65537, 983043, 5, 65537, 983044, 5, 65537, 983045, 5, 65537, 983046, 5, 65537, 983047, 5, 65537, 983048, 5, 65537, 983049, 5, 65537, 983050, 5, 65537, 983051, 5, 65537, 983052, 5, 65537, 983053, 5, 65537, 983054, 5, 65537, 983055, 5, 65537, 983056, 5, 65537, 983057, 5, 65537, 983058, 5, 65537, 983059, 5, 65537, 1114103, 5, 65537, 1114104, 5, 65537, 1114105, 5, 65537, 1114106, 5, 65537, 1114107, 5, 65537, 1114108, 5, 65537, 1114109, 5, 65537, 1114110, 5, 65537, 1114111, 5, 65537, 1048576, 5, 65537, 1048577, 5, 65537, 1048578, 5, 65537, 1048579, 5, 65537, 1048580, 5, 65537, 1048581, 5, 65537, 1048582, 5, 65537, 1048583, 5, 65537, 1048584, 5, 65537, 1048585, 5, 65537, 1048586, 5, 65537, 1048587, 5, 65537, 1048588, 5, 65537, 1048589, 5, 65537, 1048590, 5, 65537, 1048591, 5, 65537, 1048592, 5, 65537, 1048593, 5, 65537, 1048594, 5, 65537, 1048595, 5, 65537, 1179639, 5, 65537, 1179640, 5, 65537, 1179641, 5, 65537, 1179642, 5, 65537, 1179643, 5, 65537, 1179644, 5, 65537, 1179645, 5, 65537, 1179646, 5, 65537, 1179647, 5, 65537, 1114112, 5, 65537, 1114113, 5, 65537, 1114114, 5, 65537, 1114115, 5, 65537, 1114116, 5, 65537, 1114117, 5, 65537, 1114118, 5, 65537, 1114119, 5, 65537, 1114120, 5, 65537, 1114121, 5, 65537, 1114122, 5, 65537, 1114123, 5, 65537, 1114124, 5, 65537, 1114125, 5, 65537, 1114126, 5, 65537, 1114127, 5, 65537, 1114128, 5, 65537, 1114129, 5, 65537, 1114130, 5, 65537, 1114131, 5, 65537, 1245175, 5, 65537, 1245176, 5, 65537, 1245177, 5, 65537, 1245178, 5, 65537, 1245179, 5, 65537, 1245180, 5, 65537, 1245181, 5, 65537, 1245182, 5, 65537, 1245183, 5, 65537, 1179648, 5, 65537, 1179649, 5, 65537, 1179650, 5, 65537, 1179651, 5, 65537, 1179652, 5, 65537, 1179653, 5, 65537, 1179654, 5, 65537, 1179655, 5, 65537, 1179656, 5, 65537, 1179657, 5, 65537, 1179658, 5, 65537, 1179659, 5, 65537, 1179660, 5, 65537, 1179661, 5, 65537, 1179662, 5, 65537, 1179663, 5, 65537, 1179664, 5, 65537, 1179665, 5, 65537, 1179666, 5, 65537, 1179667, 5, 65537, 1310711, 5, 65537, 1310712, 5, 65537, 1310713, 5, 65537, 1310714, 5, 65537, 1310715, 5, 65537, 1310716, 5, 65537, 1310717, 5, 65537, 1310718, 5, 65537, 1310719, 5, 65537, 1245184, 5, 65537, 1245185, 5, 65537, 1245186, 5, 65537, 1245187, 5, 65537, 1245188, 5, 65537, 1245189, 5, 65537, 1245190, 5, 65537, 1245191, 5, 65537, 1245192, 5, 65537, 1245193, 5, 65537, 1245194, 5, 65537, 1245195, 5, 65537, 1245196, 5, 65537, 1245197, 5, 65537, 1245198, 5, 65537, 1245199, 5, 65537, 1245200, 5, 65537, 1245201, 5, 65537, 1245202, 5, 65537, 1245203, 5, 65537, 1376247, 5, 65537, 1376248, 5, 65537, 1376249, 5, 65537, 1376250, 5, 65537, 1376251, 5, 65537, 1376252, 5, 65537, 1376253, 5, 65537, 1376254, 5, 65537, 1376255, 5, 65537, 1310720, 5, 65537, 1310721, 5, 65537, 1310722, 5, 65537, 1310723, 5, 65537, 1310724, 5, 65537, 1310725, 5, 65537, 1310726, 5, 65537, 1310727, 5, 65537, 1310728, 5, 65537, 1310729, 5, 65537, 1310730, 5, 65537, 1310731, 5, 65537, 1310732, 5, 65537, 1310733, 5, 65537, 1310734, 5, 65537, 1310735, 5, 65537, 1310736, 5, 65537, 1310737, 5, 65537, 1310738, 5, 65537, 1310739, 5, 65537 )
script = ExtResource( 2 )

[node name="tilemap_house_interior_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131072, 1, 0, 131073, 1, 0, 131074, 1, 0, 196614, 0, 0, 196615, 0, 0, 458752, 3, 5, 524288, 2, 0, 524290, 3, 2 )

[node name="npc_friend" type="Area2D" parent="tilemap_house_interior_decor"]
collision_layer = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="col_friend" type="CollisionShape2D" parent="tilemap_house_interior_decor/npc_friend"]
position = Vector2( 24, 168 )
shape = SubResource( 1 )

[node name="spr_friend" type="Sprite" parent="tilemap_house_interior_decor/npc_friend"]
position = Vector2( 24, 168 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="dialogue_system" parent="tilemap_house_interior_decor/npc_friend" instance=ExtResource( 7 )]

[node name="havekey" parent="tilemap_house_interior_decor/npc_friend/dialogue_system" instance=ExtResource( 8 )]
dialogue_lines = [ [ "Halo dokter", "Coba bicara dengannya tentang itu" ], [ "Hello doctor", "Try speaking to him about that" ] ]
dialogue_picture_resource = [ ExtResource( 9 ), null ]

[node name="nokey-0" parent="tilemap_house_interior_decor/npc_friend/dialogue_system" instance=ExtResource( 8 )]
dialogue_lines = [ [ "Halo dokter", "Sebaiknya bicara terlebih dahulu dengan Kobus", "Dia ada di rumah abu-abu di sekitar pertigaan" ], [ "Hello doctor", "I think you should speak to him first", "He's at the gray house by the intersection" ] ]
dialogue_picture_resource = [ ExtResource( 9 ), null, null ]

[node name="nokey-1" parent="tilemap_house_interior_decor/npc_friend/dialogue_system" instance=ExtResource( 8 )]
dialogue_lines = [ [ "Halo dokter", "Coba bicara dengan ibunya terlebih dahulu", "Dia ada di dekat danau" ], [ "Hello doctor", "I think you should speak to his mother first", "She's by the lake" ] ]
dialogue_picture_resource = [ ExtResource( 9 ), null, null ]

[node name="nokey-2" parent="tilemap_house_interior_decor/npc_friend/dialogue_system" instance=ExtResource( 8 )]
dialogue_lines = [ [ "Halo, dokter. Bagaimana dia?", "Saya tahu apa masalahnya", "tapi itu tidak cukup untuk membujuknya", "apakah kamu punya sesuatu yang bisa membantuku membujuknya?", "Dia sudah melalui banyak hal", "Amarah yang terkumpul dalamnya mungkin sudah mencapai puncaknya", "Tenangkan dia, berikan permen. Nih", "Terima kasih" ], [ "Hello, doctor. How's he?", "I'm able to know what his problem is", "but it's not enough to persuade him", "do you have anything that can help me persuade him?", "He's been through a lot", "The anger that has built up inside him has probably reached its peak", "Calm him down, give him some candy, here", "Thank you" ] ]
dialogue_picture_resource = [ ExtResource( 9 ), ExtResource( 11 ), null, ExtResource( 10 ), ExtResource( 9 ), null, null, ExtResource( 12 ) ]
dialogue_command = "give_key"

[node name="entity_mc" parent="tilemap_house_interior_decor" instance=ExtResource( 5 )]
position = Vector2( 56, 200 )

[node name="area_change_map" parent="." instance=ExtResource( 6 )]
position = Vector2( 56, 224 )
destination = "res://maps/chapter1/chapter1-2.tscn"
location = Vector2( 344, -16 )

[node name="col_area_change" type="CollisionShape2D" parent="area_change_map"]
shape = SubResource( 2 )
[connection signal="body_entered" from="tilemap_house_interior_decor/npc_friend" to="tilemap_house_interior_decor/npc_friend" method="_on_npc_friend_body_entered"]
[connection signal="body_exited" from="tilemap_house_interior_decor/npc_friend" to="tilemap_house_interior_decor/npc_friend" method="_on_npc_friend_body_exited"]
